--- a/packages/api/Cargo.toml
+++ b/packages/api/Cargo.toml
@@ -24,3 +24,4 @@ hyper = { version = "0.14.19", features = ["full"] }
 jsonwebtoken = "8.1.1"
 once_cell = "1.12.0"
 acrud = { path = "../acrud" }
+validator = { version = "0.14", features = ["derive"] }
