--- a/packages/acrud/Cargo.toml
+++ b/packages/acrud/Cargo.toml
@@ -13,3 +13,5 @@ axum = { version = "0.5.9", features = ["headers"] }
 hyper = { version = "0.14.19", features = ["full"] }
 tracing = "0.1.35"
 tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
+utoipa = { version = "1.1.0", features = ["uuid"]}
+mime = "0.3.16"
