--- a/packages/api/Cargo.toml
+++ b/packages/api/Cargo.toml
@@ -25,3 +25,5 @@ jsonwebtoken = "8.1.1"
 once_cell = "1.12.0"
 acrud = { path = "../acrud" }
 validator = { version = "0.14", features = ["derive"] }
+utoipa = { version = "1.1.0", features = ["uuid"]}
+utoipa-swagger-ui = { version = "1.1.0" }
