--- a/packages/api/entity/Cargo.toml
+++ b/packages/api/entity/Cargo.toml
@@ -10,3 +10,5 @@ sea-orm = "0.8.0"
 serde = { version = "1.0.137", features = ["derive"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
 validator = { version = "0.14", features = ["derive"] }
+utoipa = { version = "1.1.0", features = ["uuid"]}
+serde_json = "1.0"
