--- a/packages/api/entity/Cargo.toml
+++ b/packages/api/entity/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 sea-orm = "0.8.0"
 serde = { version = "1.0.137", features = ["derive"] }
+uuid = { version = "0.8", features = ["serde", "v4"] }
+validator = { version = "0.14", features = ["derive"] }
+utoipa = { version = "1.1.0", features = ["uuid"]}
+serde_json = "1.0"
