--- a/packages/api/Cargo.toml
+++ b/packages/api/Cargo.toml
@@ -19,7 +19,7 @@ dotenv = "0.15.0"
 tower = "0.4.13"
 tower-http = { version = "0.3.4", features = ["full"] }
 tracing = "0.1.35"
-tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt", "json"] }
 hyper = { version = "0.14.19", features = ["full"] }
 jsonwebtoken = "8.1.1"
 once_cell = "1.12.0"
