--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=postgres://pguser:pgpass@127.0.0.1:5447/todo_hyper
-RUST_LOG=debug
+RUST_LOG=error
+JWT_SECRET=McI6A9!kEgz81v^%f%vVx8mzKS
