--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   "editor.tabSize": 4,
-  "rust-analyzer.cargo.loadOutDirsFromCheck": true,
   "rust-analyzer.procMacro.enable": true,
   "rust-analyzer.diagnostics.disabled": [
     "unresolved-proc-macro"
-  ]
+  ],
+  "rust-analyzer.cargo.buildScripts.enable": true
 }
