--- a/packages/acrud/Cargo.toml
+++ b/packages/acrud/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "0.1.56"
+futures = "0.3.21"
 sea-orm = { version = "0.8.0", features = ["sqlx-postgres", "runtime-tokio-native-tls"], default-features = false  }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -15,3 +17,4 @@ tracing = "0.1.35"
 tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
 utoipa = { version = "1.1.0", features = ["uuid"]}
 mime = "0.3.16"
+argon2 = "0.4.1"
