--- a/packages/api/Cargo.toml
+++ b/packages/api/Cargo.toml
@@ -27,3 +27,6 @@ acrud = { path = "../acrud" }
 validator = { version = "0.14", features = ["derive"] }
 utoipa = { version = "1.1.0", features = ["uuid"]}
 utoipa-swagger-ui = { version = "1.1.0" }
+argon2 = "0.4.1"
+fake = "2.5.0"
+rand = "0.8.5"
