--- a/packages/api/entity/Cargo.toml
+++ b/packages/api/entity/Cargo.toml
@@ -12,3 +12,4 @@ uuid = { version = "0.8", features = ["serde", "v4"] }
 validator = { version = "0.14", features = ["derive"] }
 utoipa = { version = "1.1.0", features = ["uuid"]}
 serde_json = "1.0"
+rust-argon2 = "1.0"
