--- a/packages/api/Cargo.toml
+++ b/packages/api/Cargo.toml
@@ -30,3 +30,4 @@ utoipa-swagger-ui = { version = "1.1.0" }
 argon2 = "0.4.1"
 fake = "2.5.0"
 rand = "0.8.5"
+uuid = { version = "0.8", features = ["serde", "v4"] }
