--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,5 +1,20 @@
 version: '3'
 
+includes:
+  cli:
+    taskfile: ./packages/acrud-cli
+    dir: ./packages/acrud-cli
+
+  api:
+    taskfile: ./packages/api
+    dir: ./packages/api
+
+env:
+  JWT_SECRET: McI6A9!kEgz81v^%f%vVx8mzKS
+  RUST_LOG: debug
+  DATABASE_URL: postgres://pguser:pgpass@127.0.0.1:5447/todo_hyper
+  SALT: o#596T*O65MATwDX4LtR
+
 tasks:
   mongo:start:
     desc: start mongodb
@@ -8,16 +23,13 @@ tasks:
 
   start:dev:
     desc: start server in development mod
+
     cmds:
       - docker-compose up -d
       - cargo-watch -x run
 
   start:prod:
     desc: start in production mod
-    env:
-      JWT_SECRET: McI6A9!kEgz81v^%f%vVx8mzKS
-      RUST_LOG: error
-      DATABASE_URL: postgres://pguser:pgpass@127.0.0.1:5447/todo_hyper
     cmds:
       - docker-compose up -d
       -  cargo build --release
